# allegro-hand-ros

./: .travis.yml  README.md
allegro_epfl_launchers/: CMakeLists.txt  package.xml
allegro_epfl_launchers/launch/: epfl_right.launch
allegro_hand/: CMakeLists.txt  package.xml  setup.py
allegro_hand/launch/: allegro_hand.launch
allegro_hand/src/allegro_hand/: example_allegro_lib.py  liballegro.py
allegro_hand/src/allegro_hand/test/: test_allegro_lib.py
allegro_hand/test/: allegro_launch.test
allegro_hand_common/include/allegro_hand_common/: controlAllegroHand.h
allegro_hand_common/src/: controlAllegroHand.cpp
allegro_hand_controllers/: CMakeLists.txt  package.xml
allegro_hand_controllers/launch/: allegro_hand.launch
allegro_hand_controllers/src/: allegro_node.cpp  allegro_node.h  allegro_node_common.cpp  allegro_node_common.h  allegro_node_grasp.cpp  allegro_node_grasp.h  allegro_node_pd.cpp  allegro_node_pd.h  allegro_node_sim.cpp  allegro_node_sim.h  allegro_node_torque.cpp  allegro_node_torque.h  allegro_node_velsat.cpp  allegro_node_velsat.h
allegro_hand_description/: CMakeLists.txt  allegro_hand_config.rviz  allegro_hand_description_left.urdf  allegro_hand_description_left.xacro  allegro_hand_description_right.xacro  package.xml
allegro_hand_description/scripts/: detect_pcan.py
allegro_hand_driver/: CMakeLists.txt
allegro_hand_driver/include/allegro_hand_driver/: controlAllegroHand.h
allegro_hand_driver/src/: controlAllegroHand.cpp
allegro_hand_keyboard/: CMakeLists.txt
allegro_hand_keyboard/src/: allegro_hand_keyboard.cpp
allegro_hand_parameters/zero_files/: zero_SAH030F047R.yaml
bhand/: CMakeLists.txt
epfl_allegro_launchers/: CMakeLists.txt  README.md  package.xml
epfl_allegro_launchers/launch/: epfl_left.launch  epfl_right.launch
